# CVE-2023-50387

./: LICENSE  README.md  docker-compose.yml  pyproject.toml  rrsig.py
attacker/: Dockerfile
auth/: Dockerfile  a.test.zone  a.test.zone.signed  ksk.key  ksk.private  named.conf  zsk.key  zsk.private
resolver/: Dockerfile  a.test.key  unbound.conf
